# IGR202-projet

./: CMakeLists.txt
dep/glad/: CMakeLists.txt
src/: Mesh.cpp  Mesh.h  fragmentShader.glsl  main.cpp  vertexShader.glsl
